addin category and UI

--- a/app/views/authors/_form.html.erb
+++ b/app/views/authors/_form.html.erb
@@ -32,8 +32,8 @@
   </div>
 
   <div class="field">
-    <%= form.label :author_image %>
-    <%= form.file_field :author_image %>
+    <%= form.label :photo %>
+    <%= form.text_field :photo %>
   </div>
 
   <div class="actions">
