adding book management and modified menu link

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -14,9 +14,9 @@
     <% @categories.each do |category| %>
       <tr>
         <td><%= category.category_name %></td>
-        <td><%= link_to 'Show', category %></td>
-        <td><%= link_to 'Edit', edit_category_path(category) %></td>
-        <td><%= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', category, class: 'btn btn-sm btn-primary' %></td>
+        <td><%= link_to 'Edit', edit_category_path(category), class: 'btn btn-sm btn-success' %></td>
+        <td><%= link_to 'Destroy', category, method: :delete, class: 'btn btn-sm btn-danger', data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
