--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,11 +17,14 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item active">
-            <a class="nav-link" href="authors">Author</a>
+          <li class="navbar-nav">
+            <%= link_to 'Author', authors_path, class: 'nav-link' %>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="categories">Category</a>
+          <li class="navbar-nav">
+            <%= link_to 'Category', categories_path, class: 'nav-link' %>
+          </li>
+          <li class="navbar-nav">
+            <%= link_to 'Book Management', book_managements_path, class: 'nav-link' %>
           </li>
         </ul>
       </div>
