--- a/app/views/book_managements/show.html.erb
+++ b/app/views/book_managements/show.html.erb
@@ -20,5 +20,12 @@
   <%= @book_management.category_id %>
 </p>
 
+<p>
+  <strong>Cover Photo:</strong>
+  <%= link_to image_tag(@book_management.book_image, style: 'width: 20%, height: 10%') %> 
+</p>
+
+
+
 <%= link_to 'Edit', edit_book_management_path(@book_management) %> |
 <%= link_to 'Back', book_managements_path %>
