--- a/app/views/book_managements/show.html.erb
+++ b/app/views/book_managements/show.html.erb
@@ -12,12 +12,12 @@
 
 <p>
   <strong>Author:</strong>
-  <%= @book_management.author_id %>
+  <%= @book_management.author.name %>
 </p>
 
 <p>
   <strong>Category:</strong>
-  <%= @book_management.category_id %>
+  <%= @book_management.category.category_name %>
 </p>
 
 <p>
