adding published button in book management

--- a/app/views/book_managements/show.html.erb
+++ b/app/views/book_managements/show.html.erb
@@ -16,8 +16,13 @@
 </p>
 
 <p>
-  <strong>Category:</strong>
+  <strong>Category Name:</strong>
   <%= @book_management.category.category_name %>
+</p>
+
+<p>
+  <strong>Published Date:</strong>
+  <%= @book_management.published_date %>
 </p>
 
 <p>
