adding subscriber api

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,9 @@
           <li class="navbar-nav">
             <%= link_to 'Book Management', book_managements_path, class: 'nav-link' %>
           </li>
+          <li class="navbar-nav">
+            <%= link_to 'Subscribe Members', subscribers_path, class: 'nav-link' %>
+          </li>
         </ul>
       </div>
     </nav>
