adding pdf downloading function

--- a/app/views/book_managements/_form.html.erb
+++ b/app/views/book_managements/_form.html.erb
@@ -35,7 +35,8 @@
           </div>
         </div>
 
-        <%= f.input :book_image, as: :file, label: "Image of house" %>
+        <%= f.input :book_image, as: :file, label: "Cover Photo" %>
+        <%= f.input :pdf_attachment, as: :file, label: "PDF Upload" %>
 
         <div class="form-group row">
           <div class="col-xs-8 col-xs-offset-3">
