add fixing a little bit UI

--- a/app/views/book_managements/show.html.erb
+++ b/app/views/book_managements/show.html.erb
@@ -34,7 +34,7 @@
 
 <p>
   <strong>Cover Photo:</strong>
-  <%= link_to image_tag(@book_management.book_image, style: 'width: 20%, height: 10%') %> 
+  <%= link_to image_tag(@book_management.book_image) %> 
 </p>
 
 <%= link_to 'Edit', edit_book_management_path(@book_management) %> |
