--- a/app/views/authors/index.html.erb
+++ b/app/views/authors/index.html.erb
@@ -1,6 +1,5 @@
 <p id="notice"><%= notice %></p>
-
-<h4>Authors</h4>
+<%= link_to 'New Author', new_author_path, class: 'btn btn-sm btn-primary mb-3' %>
 
 <div class="">
   <table class="table table-striped">
@@ -31,7 +30,3 @@
   </tbody>
 </table>
 </div>
-
-<br>
-
-<%= link_to 'New Author', new_author_path %>
