--- a/app/views/book_managements/_form.html.erb
+++ b/app/views/book_managements/_form.html.erb
@@ -7,42 +7,52 @@
       </div>
 
       <form>
-        <div class="form-group row">
+        <div class="form-group row mb-3">
           <label for="Title" class="col-sm-2 col-form-label">Title</label>
           <div class="col-sm-10">
             <%= f.input :title, input_html: { class: 'form-control' }, label: false %>
           </div>
         </div>
 
-        <div class="form-group row">
+        <div class="form-group row mb-3">
           <label for="Description" class="col-sm-2 col-form-label">Description</label>
           <div class="col-sm-10">
             <%= f.input :description, input_html: { class: 'form-control' }, label: false %>
           </div>
         </div>
 
-        <div class="form-group row">
+        <div class="form-group row mb-3">
           <label for="Author" class="col-sm-2 col-form-label">Author</label>
           <div class="col-sm-10">
-            <%= f.association :author, :collection => Author.all, include_blank: false, label: false, label_method: :name, value_method: :id %>
+            <%= f.association :author, :collection => Author.all, include_blank: false, label: false, label_method: :name, value_method: :id, input_html: { class: 'form-control'} %>
           </div>
         </div>
 
-        <div class="form-group row">
+        <div class="form-group row mb-3">
           <label for="Category" class="col-sm-2 col-form-label">Category</label>
           <div class="col-sm-10">
-            <%= f.association :category, :collection => Category.all, include_blank: false, label: false, label_method: :category_name, value_method: :id %>
+            <%= f.association :category, :collection => Category.all, include_blank: false, label: false, label_method: :category_name, value_method: :id, input_html: { class: 'form-control'} %>
+          </div>
+        </div>
+        
+        <div class="form-group row mb-3">
+          <label for="Category" class="col-sm-2 col-form-label">Cover Photo</label>
+          <div class="col-sm-10">
+            <%= f.input :book_image, as: :file, label: false, input_html: { class: 'form-control'} %>
           </div>
         </div>
 
-        <%= f.input :book_image, as: :file, label: "Cover Photo" %>
-        <%= f.input :pdf_attachment, as: :file, label: "PDF Upload" %>
+        <div class="form-group row mb-3">
+          <label for="Category" class="col-sm-2 col-form-label">Upload PDF File</label>
+          <div class="col-sm-10">
+            <%= f.input :pdf_attachment, as: :file, label: false, input_html: { class: 'form-control'} %>
+          </div>
+        </div>
 
         <div class="form-group row">
           <div class="col-xs-8 col-xs-offset-3">
             <%= f.button :submit, { class: 'btn btn-success' }  %>
           </div>
         </div>      <!-- form-group row -->
-        
       </form>
   <% end %>
