--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,6 +1,5 @@
 <p id="notice"><%= notice %></p>
-
-<h1>Categories</h1>
+<%= link_to 'New Category', new_category_path, class: 'btn btn-sm btn-primary mb-3' %>
 
 <table class="table table-striped">
   <thead>
@@ -21,7 +20,3 @@
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Category', new_category_path %>
