--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,37 +14,55 @@
     <p class="alert"><%= alert %></p>
     
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <%# <a class="navbar-brand" href="#">Navbar</a> %>
-      <% if user_signed_in? %>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+    <% if user_signed_in? %>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="navbar-nav">
+
+      <div class="container" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
             <%= link_to 'Author', authors_path, class: 'nav-link' %>
           </li>
-          <li class="navbar-nav">
+          <li class="nav-item">
             <%= link_to 'Category', categories_path, class: 'nav-link' %>
           </li>
-          <li class="navbar-nav">
+          <li class="nav-item">
             <%= link_to 'Book Management', book_managements_path, class: 'nav-link' %>
           </li>
-          <li class="navbar-nav">
+          <li class="nav-item">
             <%= link_to 'Subscribe Members', subscribers_path, class: 'nav-link' %>
           </li>
-          <li class="navbar-nav">
-            Logged in as <strong><%= current_user.email %></strong>
-            <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
-            <%= link_to "Sign out", destroy_user_session_path, data: { turbo_method: :delete }, :class => 'navbar-link' %>
+        </ul>
+        <ul class="navbar-nav justify-content-end">
+          <%# <strong><%= current_user.email ></strong> %>
+          <li class="nav-item">
+            <%= link_to 'Edit profile', edit_user_registration_path, :class => 'nav-link' %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "Sign out", destroy_user_session_path, data: { turbo_method: :delete }, :class => 'nav-link' %>
           </li>
         </ul>
       </div>
       <% else %>
-        <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
-        <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
+        <%= link_to "Sign up", new_user_registration_path, :class => 'nav-link'  %> |
+        <%= link_to "Login", new_user_session_path, :class => 'nav-link'  %>
       <% end %>
     </nav>
     <%= yield %>
   </body>
 </html>
+
+
+
+          <%# <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Dropdown
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+          </li> %>
