--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,16 +1,59 @@
+<%= simple_form_for @project, html: { class: 'form-horizontal' } do |f| %>
+  <div class = "panel panel-default mb-4">
+    <div class="panel-heading no-print">
+      <div class="btn-group">
+        <%= link_to "#{controller_name.humanize()} List", projects_path, :class => "btn btn-sm btn-primary" %>
+      </div>                                  <!-- btn-group -->
+    </div>                                    <!-- panel-heading no-print -->
+  </div>                                      <!-- panel panel-default -->
 
-<%= simple_form_for(@project) do |f| %>
   <%= f.error_notification %>
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
+  
+  <div class="container">
+    <div class="row">
+      <div class="col-8">
+        <form class="col-4">
+          <div class="form-group row mb-3">
+            <label for="Title" class="col-sm-4 col-form-label">Title</label>
+            <div class="col-sm-8">
+              <%= f.input :title, input_html: { class: "form-control" }, label: false %>
+            </div>
+          </div>             <!-- form-group row -->
 
-  <div class="form-inputs">
-    <%= f.input :title %>
-    <%= f.input :description %>
-    <%= f.input :text %>
-    <%= f.association :user %>
-  </div>
+          <div class="form-group row mb-3">
+            <label for="Title" class="col-sm-4 col-form-label">Description</label>
+            <div class="col-sm-8">
+              <%= f.input :description, input_html: { class: "form-control" }, label: false %>
+            </div>
+          </div>             <!-- form-group row -->
 
-  <div class="form-actions">
-    <%= f.button :submit %>
+          <div class="form-group row mb-3">
+            <label for="Title" class="col-sm-4 col-form-label">Text</label>
+            <div class="col-sm-8">
+              <%= f.input :text, input_html: { class: "form-control" }, label: false %>
+            </div>
+          </div>             <!-- form-group row -->
+
+          <div class="form-group row mb-3">
+            <label for="Title" class="col-sm-4 col-form-label">Title</label>
+            <div class="col-sm-8">
+              <%= f.association :user, :collection => User.all, include_blank: false, label: false, label_method: :email, value_method: :id, input_html: { class: 'form-control'} %>
+            </div>
+          </div>             <!-- form-group row -->
+
+          <div class="form-group row">
+            <div class="col-sm-4">
+              <%= link_to 'Back', projects_path, class: "btn btn-sm btn-primary" %>
+            </div>
+            <div class="col-sm-8">
+              <%= f.button :submit, { class: 'btn btn-success' }  %>
+            </div>
+          </div>             <!-- form-group row -->
+        </form>
+      </div>
+      <div class="col-auto">
+      </div>
+    </div>
   </div>
 <% end %>
