--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Project</h1>
+<%= "#{action_name.humanize()}" " Project" %>
 
 <%= render 'form', project: @project %>
 
-<%= link_to 'Show', @project %> |
-<%= link_to 'Back', projects_path %>
+<%#= link_to 'Show', @project %>
+<%#= link_to 'Back', projects_path %>
