--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -19,7 +19,7 @@
         <td><%= project.title %></td>
         <td><%= project.description %></td>
         <td><%= project.text %></td>
-        <td><%= project.user_id %></td>
+        <td><%#= project.user_id %></td>
         <td><%= link_to 'Show', project %></td>
         <td><%= link_to 'Edit', edit_project_path(project) %></td>
         <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
