--- a/app/views/template/_alerts.html.erb
+++ b/app/views/template/_alerts.html.erb
@@ -1,21 +1,22 @@
 <% if notice %>
     <div class="col-sm-4 col-md-4 custom_error_message">
-      <div class="alert alert-success">
-          <button type="button" class="close" data-dismiss="alert" aria-label="Close" aria-hidden="true">×</button>
-          <span class="glyphicon glyphicon-info-sign"></span> 
+      <div class="alert alert-warning alert-dismissible fade show" role="alert">
           <strong><%= notice %></strong>
-          <!-- <hr class="message-inner-separator"> -->
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
       </div>
     </div>
 <% end %>
 
 <% if alert %>
     <div class="col-sm-4 col-md-4 custom_error_message">
-      <div class="alert alert-success">
-          <button type="button" class="close" data-dismiss="alert" aria-label="Close" aria-hidden="true">×</button>
-          <span class="glyphicon glyphicon-info-sign"></span> 
+      <div class="alert alert-warning alert-dismissible fade show" role="alert">
           <strong><%= alert %></strong>
-          <!-- <hr class="message-inner-separator"> -->
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
       </div>
     </div>
 <% end %>
+
+<%# <div class="alert alert-warning alert-dismissible fade show" role="alert">
+  <strong>Holy guacamole!</strong> You should check in on some of those fields below.
+  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div> %>
