--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -24,23 +24,23 @@
           <div class="form-group row mb-3">
             <label for="Title" class="col-sm-4 col-form-label">Description</label>
             <div class="col-sm-8">
-              <%= f.input :description, input_html: { class: "form-control" }, label: false %>
+              <%= f.input :description, as: :text, input_html: { class: "form-control" }, label: false %>
             </div>
           </div>             <!-- form-group row -->
 
-          <div class="form-group row mb-3">
+          <%# <div class="form-group row mb-3">
             <label for="Title" class="col-sm-4 col-form-label">Text</label>
             <div class="col-sm-8">
-              <%= f.input :text, input_html: { class: "form-control" }, label: false %>
+              <%= f.input :text, input_html: { class: "form-control" }, label: false >
             </div>
-          </div>             <!-- form-group row -->
+          </div>             <!-- form-group row --> %>
 
-          <div class="form-group row mb-3">
+          <%# <div class="form-group row mb-3">
             <label for="Title" class="col-sm-4 col-form-label">Title</label>
             <div class="col-sm-8">
-              <%= f.association :user, :collection => User.all, include_blank: false, label: false, label_method: :email, value_method: :id, input_html: { class: 'form-control'} %>
+              <%= f.association :user, :collection => User.all, include_blank: false, label: false, label_method: :email, value_method: :id, input_html: { class: 'form-control'} >
             </div>
-          </div>             <!-- form-group row -->
+          </div>             <!-- form-group row --> %>
 
           <div class="form-group row">
             <div class="col-sm-4">
