--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,33 +1,31 @@
-<p id="notice"><%= notice %></p>
+<%# <p id="notice"><%= notice ></p> %>
+<div class="mt-4 mb-4">
+  <button type="button" class="btn btn-primary position-relative">
+  Projects
+  <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+    <%= @projects.count %>
+    <%# <span class="visually-hidden">unread messages</span> %>
+  </span>
+</button>
+</div>
 
-<h1>Projects</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Text</th>
-      <th>User</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @projects.each do |project| %>
-      <tr>
-        <td><%= project.title %></td>
-        <td><%= project.description %></td>
-        <td><%= project.text %></td>
-        <td><%#= project.user_id %></td>
-        <td><%= link_to 'Show', project %></td>
-        <td><%= link_to 'Edit', edit_project_path(project) %></td>
-        <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
+<div class="row align-items-start">
+  <% @projects.each do |project| %>
+    <div class="col-4">
+      <%= link_to project, class: "block" do %>
+        <div class="card">
+          <div class="card-header">
+            <%= project.title %>
+          </div>
+          <div class="card-body text-decoration-none">
+            <%# <h5 class="card-title">Special title treatment</h5> %>
+            <p class="card-text"><%= truncate(project.description, length: 200) %></p>
+            <button type="button" class="btn btn-sm btn-outline-info">Info</button>
+          </div>
+        </div>
+      <% end %>    
+    </div>
+  <% end %>
+</div>
 
 <%= link_to 'New Project', new_project_path %>
