--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,17 +1,23 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Title:</strong>
-  <%= @project.title %>
-</p>
-<%# <% if @project.author(current_user) %>
-  <%#= link_to 'Edit Project'. edit_project_path(@project), class: "underline" %>
-<%# end %>
-
-<p>
-  <strong>Description:</strong>
-  <%= @project.description %>
-</p>
+<div class="d-flex justify-content-center">
+  <div class="col-6">
+  <div class="card">
+    <h5 class="card-header"><%= @project.title %></h5>
+    <div class="card-body">
+      <p class="card-text"><small class="text-muted">Description: </small></p>
+      <p class="card-text"><%= @project.description %></p>
+      <p class="card-text mb-0"><small class="text-muted">Tasks: </small></p>
+      <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom"></div>
+      <% @project.tasks.each do |task| %>
+        <p class="list-group-item">
+          <%= check_box_tag "complete", task.complete %>
+          <%= task.body %>
+        </p>
+      <% end %>
+      <%= render "tasks/form", task: @task %>
+    </div>
+  </div>
+</div>
+</div>
 
 <%= link_to 'Edit', edit_project_path(@project) %> |
 <%= link_to 'Back', projects_path %>
