--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,15 +1,16 @@
 
-<%= simple_form_for(@task) do |f| %>
+<%= simple_form_for([@project, @task]) do |f| %>
   <%= f.error_notification %>
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
   <div class="form-inputs">
-    <%= f.input :body %>
-    <%= f.association :project %>
-    <%= f.input :complete %>
+    <p class="card-text"><small class="text-muted">Add a tasks: </small></p>
+    <%= f.input :body, label: false, input_html: { class: "form-control"} %>
+    <%#= f.input :complete, input_html: { class: "form-check-input" } %>
+    <%#= f.association :project %>
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit %>
+    <%= f.button :submit, { class: 'btn btn-sm btn-primary mt-2' }  %>
   </div>
 <% end %>
